Finish Overlapping issue

--- a/ogserver/src/main/resources/webroot/css/agency.css
+++ b/ogserver/src/main/resources/webroot/css/agency.css
@@ -3343,6 +3343,13 @@ width: 325px!important;
 #alt1-frame ul li.active {
     border-top: 0px solid #F1591F;
 }
+.finish-overlap{
+    float: left !important;
+    margin-left: 1%;
+    margin-bottom: 1%;
+    border-radius:4px;
+}
+
 @media (max-width: 991px) {
     .relcontrol{
         margin-top:70px!important;
